# alphafold

./: .gitignore  README.md  environment.yml  pyproject.toml  requirements.txt  run_af2ig.py
examples/hpc/: af2ig.sh  run_af2ig.sbatch
examples/monomer/: monomers.fasta  monomers.sh
examples/multimer/: multimers.fasta  multimers.sh
scripts/: download_all_data.sh  download_alphafold_params.sh  download_bfd.sh  download_mgnify.sh  download_pdb70.sh  download_pdb_mmcif.sh  download_pdb_seqres.sh  download_small_bfd.sh  download_uniprot.sh  download_uniref30.sh  download_uniref90.sh
