# Copyright 2021 DeepMind Technologies Limited
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "alphafold"
dynamic = ["version"]
requires-python = ">=3.12"
description = "An implementation of the inference pipeline of AlphaFold v2.0. This is a completely new model that was entered as AlphaFold2 in CASP14 and published in Nature."
authors = [{ name = "DeepMind", email = "alphafold@deepmind.com" }]
license = { text = "Apache License, Version 2.0" }
readme = "README.md"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "absl-py",
    "biopython",
    "dm-haiku",
    "docker",
    "jax",
    "matplotlib",
    "ml-collections",
    "numpy",
    "openmm",
    "tensorflow-cpu",
]

[project.optional-dependencies]
test = ["pytest"]

[project.urls]
Homepage = "https://github.com/FridrichMethod/alphafold"

[project.scripts]
run_alphafold = "run_alphafold:main"

[tool.setuptools.dynamic]
version = { attr = "alphafold.version.__version__" }

[tool.setuptools]
py-modules = ["run_alphafold"]

[tool.pyink]
line-length = 80
unstable = true
target-version = []
pyink-indentation = 2
pyink-use-majority-quotes = true
pyink-annotation-pragmas = [
    "noqa",
    "pylint:",
    "type: ignore",
    "pytype:",
    "mypy:",
    "pyright:",
    "pyre-",
]
